# ComfyUI-E-Tier-TextSaver

./: LICENSE  README.md  __init__.py  install.bat  pyproject.toml
.github/workflows/: publish.yml
py/: e_tier_text_saver.py
py/config/: E_Tier_WL.yaml
web/js/: TextSaverDisplay.js
